5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4179/executions/1595_2895.log
== TEST (2019-03-21 16:59:09) 
-- CODE:
var=input(5)
var=input(100.0)
var=input(40)
float(var)
-- OUTPUT:
5100.040
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:59:40) 
-- CODE:
var=input(5)
var=input(100.0)
var=input(40)
float(var*3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    float(var*3)
ValueError: could not convert string to float: '78.078.078.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:11:25) 
-- CODE:
var=input("A quantidade de jogos a serem encomendados")
var=input(100.0)
var=input(40)

-- OUTPUT:
100.040
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:11:38) 
-- CODE:
var=input("A quantidade de jogos a serem encomendados? ")
var=input(100.0)
var=input(40)

-- OUTPUT:
100.040
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:13:11) 
-- CODE:
var=input("A quantidade de jogos a serem encomendados? ")
var=input("O valor unitário de cada jogo? ")
var=input("O valor do frete? ")

-- OUTPUT:
100.040
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:14:55) 
-- CODE:
var=input("A quantidade de jogos a serem encomendados? ")
var1=input("O valor unitário de cada jogo? ")
var2=input("O valor do frete? ")

-- OUTPUT:
100.040
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:16:37) 
-- CODE:
var=float(input("A quantidade de jogos a serem encomendados? "))
var1=input("O valor unitário de cada jogo? ")
var2=input("O valor do frete? ")
(input
-- ERROR:
File "XXXX", line 5
    
          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:16:42) 
-- CODE:
var=float(input("A quantidade de jogos a serem encomendados? "))
var1=input("O valor unitário de cada jogo? ")
var2=input("O valor do frete? ")

-- ERROR:
File "XXXX", line 5
    
          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:17:03) 
-- CODE:
var=float(input("A quantidade de jogos a serem encomendados? "))
var1=float(input("O valor unitário de cada jogo? "))
var2=float(input("O valor do frete? "))

-- ERROR:
File "XXXX", line 5
    
          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:17:18) 
-- CODE:
var=float(input("A quantidade de jogos a serem encomendados? "))


-- ERROR:
File "XXXX", line 5
    
          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:18:21) 
-- CODE:
var=float(input("A quantidade de jogos a serem encomendados? "))
input("O valor unitário de cada jogo ?")

-- ERROR:
File "XXXX", line 5
    
          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:18:45) 
-- CODE:
var=float(input("A quantidade de jogos a serem encomendados? "))


-- ERROR:
File "XXXX", line 5
    
          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:19:21) 
-- CODE:
var=float(input("A quantidade de jogos a serem encomendados? "))
total=(var*100)+40

-- ERROR:
File "XXXX", line 5
    
          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:19:41) 
-- CODE:
var=float(input("A quantidade de jogos a serem encomendados? "))
total=(var*100)+40
print(total)
-- OUTPUT:
1240.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:19:47) 
-- CODE:
var=float(input("A quantidade de jogos a serem encomendados? "))
total=(var*100)+40
print(total)
-- EXECUTION TIME:
0.131845
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1240.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1040.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
24640.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:21:47) 
-- CODE:
var=float(int(input("A quantidade de jogos a serem encomendados? ")))
total=(var*100)+40
print(total)

-- OUTPUT:
1240.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:21:51) 
-- CODE:
var=float(int(input("A quantidade de jogos a serem encomendados? ")))
total=(var*100)+40
print(total)

-- EXECUTION TIME:
0.201286
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1240.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1040.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
24640.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:32:04) 
-- CODE:
var1=float(int(input("A quantidade de jogos a serem encomedados?")))
var2=float(int(input("O valor unitario de cada jogo?"))
var3=flot(int(input("O valor do frete?"))

total=(var1*var2)+var3
-- ERROR:
File "XXXX", line 3
    var3=flot(int(input())
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:33:01) 
-- CODE:
var1=float(int(input("A quantidade de jogos a serem encomedados?")))
var2=float(int(input("O valor unitario de cada jogo?"))
var3=float(int(input("O valor do frete?"))

total=(var1*var2)+var3
	
-- ERROR:
File "XXXX", line 3
    var3=float(int(input())
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:33:19) 
-- CODE:
var1=float(int(input("A quantidade de jogos a serem encomedados?")))
var2=float(input("O valor unitario de cada jogo?"))
var3=float(input("O valor do frete?"))

total=(var1*var2)+var3
	
-- ERROR:
File "XXXX", line 3
    var3=float(int(input())
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:35:33) 
-- CODE:
var1=float(int(input("A quantidade de jogos a serem encomedados?")))
var2=float(input("O valor unitario de cada jogo?"))
var3=float(input("O valor do frete?"))

total=(var1*var2)+var3

print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:35:43) 
-- CODE:
var1=float(int(input("A quantidade de jogos a serem encomedados?")))
var2=float(input("O valor unitario de cada jogo?"))
var3=float(input("O valor do frete?"))

total=(var1*var2)+var3

print(total)
-- EXECUTION TIME:
0.135707
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:02:40) 
-- CODE:
var1=float(int(input("A quantidade de jogos a serem encomendados?")))
var2=float(input("O valor unitario de cada jogo?"))
var3=float(input("O valor do frete?"))

total=(var1*var2)+var3

print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:02:42) 
-- CODE:
var1=float(int(input("A quantidade de jogos a serem encomendados?")))
var2=float(input("O valor unitario de cada jogo?"))
var3=float(input("O valor do frete?"))

total=(var1*var2)+var3

print(total)
-- EXECUTION TIME:
0.196157
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
